LLM - Feat/LIVE-5016 - Newfeed page (#2570)
* Add Newsfeed page and explore tab navigator
* Add FormatRelativeTime date formatter, using Intl.RelativeTimeFormat and use it for newsfeed

---------

Co-authored-by: male-gal <maxence.le-gall@ledger.fr>

--- a/apps/ledger-live-mobile/package.json
+++ b/apps/ledger-live-mobile/package.json
@@ -71,6 +71,7 @@
     "@formatjs/intl-locale": "^2.4.46",
     "@formatjs/intl-numberformat": "^7.4.2",
     "@formatjs/intl-pluralrules": "^4.3.2",
+    "@formatjs/intl-relativetimeformat": "^11.1.8",
     "@ledgerhq/devices": "workspace:^",
     "@ledgerhq/errors": "workspace:^",
     "@ledgerhq/hw-transport": "workspace:^",
@@ -161,6 +162,7 @@
     "react-native-gesture-handler": "^2.5.0",
     "react-native-image-crop-tools": "^1.6.2",
     "react-native-image-picker": "4.8.5",
+    "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keychain": "^7.0.0",
     "react-native-level-fs": "^3.0.0",
