--- a/apps/ledger-live-mobile/package.json
+++ b/apps/ledger-live-mobile/package.json
@@ -51,7 +51,7 @@
     "lint": "eslint src --ext .js,.json,.ts,.tsx --cache",
     "lint:fix": "pnpm lint --fix",
     "typecheck": "tsc --noEmit",
-    "test:jest": "jest src --testLocationInResults",
+    "test:jest": "jest --testLocationInResults",
     "test:env": "node ./scripts/mobile-env-md.mjs",
     "test": "pnpm test:jest && pnpm test:env",
     "sync-locales": "./scripts/sync-locales.sh",
@@ -208,6 +208,7 @@
     "@actions/core": "^1.5.0",
     "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@babel/preset-flow": "^7.13.13",
     "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.12.5",
     "@jest/reporters": "^29.3.1",
@@ -259,6 +260,7 @@
     "jetifier": "^1.6.6",
     "local-web-server": "^4.2.1",
     "metro": "^0.67.0",
+    "metro-babel-register": "^0.75.0",
     "metro-extra-config": "workspace:*",
     "metro-minify-uglify": "^0.67.0",
     "metro-react-native-babel-preset": "^0.67.0",
