--- a/apps/ledger-live-mobile/package.json
+++ b/apps/ledger-live-mobile/package.json
@@ -208,7 +208,7 @@
     "@actions/core": "^1.5.0",
     "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@babel/preset-flow": "^7.13.13",
+    "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.12.5",
     "@jest/reporters": "^29.3.1",
