--- a/apps/ledger-live-mobile/package.json
+++ b/apps/ledger-live-mobile/package.json
@@ -273,6 +273,7 @@
     "react-native-flipper-performance-plugin": "^0.3.1",
     "react-native-performance": "^3.1.2",
     "react-native-performance-flipper-reporter": "^3.0.0",
+    "react-test-renderer": "^17.0.2",
     "strip-ansi": "6.0.1",
     "ts-jest": "^28.0.8",
     "typescript": "^4.8.3",
