--- a/apps/ledger-live-desktop/tsconfig.json
+++ b/apps/ledger-live-desktop/tsconfig.json
@@ -17,7 +17,8 @@
     "sourceMap": true,
     "rootDir": ".",
     "paths": {
-      "~/*": ["src/*"]
+      "~/*": ["src/*"],
+      "tests/*": ["./tests/*"]
     }
   },
   "include": ["tests", "**/*.d.ts"],
