chore(ledger-bot): Aggregate ledger-bot reports using allure All bots have their own allure project to aggregates the reports reporting, allure, ledger-bot

--- a/.github/workflows/bot-mere-denis.yml
+++ b/.github/workflows/bot-mere-denis.yml
@@ -70,3 +70,6 @@ jobs:
           SEED: ${{ secrets.SEED1 }}
           BOT_ENVIRONMENT: testing
           BOT_FILTER_FAMILY: ${{inputs.family}}
+          ALLURE_PROJECT: "mere-denis"
+          ALLURE_LOGIN: ${{secrets.ALLURE_LOGIN}}
+          ALLURE_PASSWORD: ${{secrets.ALLURE_PASSWORD}}
