--- a/.github/workflows/bot-nonreg-carbon.yml
+++ b/.github/workflows/bot-nonreg-carbon.yml
@@ -61,3 +61,6 @@ jobs:
           SLACK_ICON_EMOJI: ":bot-seed2:"
           SEED: ${{ secrets.SEED2 }}
           BOT_ENVIRONMENT: production
+          ALLURE_PROJECT: "carbon"
+          ALLURE_LOGIN: ${{secrets.ALLURE_LOGIN}}
+          ALLURE_PASSWORD: ${{secrets.ALLURE_PASSWORD}}
