--- a/.github/workflows/bot-nonreg-mooncake.yml
+++ b/.github/workflows/bot-nonreg-mooncake.yml
@@ -61,3 +61,6 @@ jobs:
           SLACK_ICON_EMOJI: ":bot-seed4:"
           SEED: ${{ secrets.SEED4 }}
           BOT_ENVIRONMENT: production
+          ALLURE_PROJECT: "mooncake"
+          ALLURE_LOGIN: ${{secrets.ALLURE_LOGIN}}
+          ALLURE_PASSWORD: ${{secrets.ALLURE_PASSWORD}}
