--- a/.github/workflows/bot-nonreg-nitrogen.yml
+++ b/.github/workflows/bot-nonreg-nitrogen.yml
@@ -62,3 +62,6 @@ jobs:
           SLACK_ICON_EMOJI: ":bot-seed7:"
           SEED: ${{ secrets.SEED7 }}
           BOT_ENVIRONMENT: production
+          ALLURE_PROJECT: "phosphore"
+          ALLURE_LOGIN: ${{secrets.ALLURE_LOGIN}}
+          ALLURE_PASSWORD: ${{secrets.ALLURE_PASSWORD}}
