--- a/.github/workflows/bot-nonreg-oxygen.yml
+++ b/.github/workflows/bot-nonreg-oxygen.yml
@@ -61,3 +61,6 @@ jobs:
           SLACK_ICON_EMOJI: ":bot-seed5:"
           SEED: ${{ secrets.SEED5 }}
           BOT_ENVIRONMENT: production
+          ALLURE_PROJECT: "oxygen"
+          ALLURE_LOGIN: ${{secrets.ALLURE_LOGIN}}
+          ALLURE_PASSWORD: ${{secrets.ALLURE_PASSWORD}}
