--- a/tools/common-tools/package.json
+++ b/tools/common-tools/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.25",
   "private": true,
   "dependencies": {
+    "@ledgerhq/coin-framework": "workspace:^",
     "@ledgerhq/cryptoassets": "workspace:^",
     "@ledgerhq/devices": "workspace:^",
     "@ledgerhq/errors": "workspace:^",
