--- a/apps/ledger-live-mobile/package.json
+++ b/apps/ledger-live-mobile/package.json
@@ -255,6 +255,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-i18next": "6.0.0-6",
     "jest": "^28.1.3",
     "jest-circus": "^28.1.1",
     "jest-environment-node": "^29.3.1",
