--- a/.github/workflows/cal-importer.yml
+++ b/.github/workflows/cal-importer.yml
@@ -53,7 +53,7 @@ jobs:
           node libs/ledgerjs/script/crypto-assets-importer/index.js $PWD/crypto-assets true
           mv libs/ledgerjs/packages/cryptoassets/src/data/**.json cal
       - name: Deploy json to s3 PRD
-        run: aws s3 sync ./cal/ s3://ledger-live-cryptoassets-prd/cryptoassets --delete
+        run: aws s3 sync ./cal/ s3://ledger-live-cryptoassets-prd/cryptoassets --delete --acl public-read
       - name: Cache invalidate PRD
         run: aws cloudfront create-invalidation --distribution-id E53IORS7MW883 --paths "/cryptoassets/*" --debug
       - name: Configure AWS credentials
