--- a/libs/ledger-live-common/package.json
+++ b/libs/ledger-live-common/package.json
@@ -146,6 +146,7 @@
     "@ledgerhq/hw-app-str": "workspace:^",
     "@ledgerhq/hw-app-tezos": "workspace:^",
     "@ledgerhq/hw-app-trx": "workspace:^",
+    "@ledgerhq/hw-app-vet": "workspace:^",
     "@ledgerhq/hw-app-xrp": "workspace:^",
     "@ledgerhq/hw-transport": "workspace:^",
     "@ledgerhq/hw-transport-mocker": "workspace:^",
@@ -232,6 +233,7 @@
     "source-map-support": "^0.5.21",
     "stellar-sdk": "^10.1.1",
     "superstruct": "0.14.2",
+    "thor-devkit": "^2.0.6",
     "tiny-secp256k1": "^1.1.6",
     "triple-beam": "^1.3.0",
     "utility-types": "^3.10.0",
