--- a/libs/ledger-live-common/package.json
+++ b/libs/ledger-live-common/package.json
@@ -172,6 +172,7 @@
     "@zondax/ledger-filecoin": "^0.11.2",
     "algo-msgpack-with-bigint": "^2.1.1",
     "algosdk": "1.13.0",
+    "aptos": "1.3.16",
     "async": "^3.2.3",
     "axios": "0.26.1",
     "axios-retry": "^3.2.4",
