--- a/apps/ledger-live-mobile/package.json
+++ b/apps/ledger-live-mobile/package.json
@@ -208,6 +208,7 @@
     "@actions/core": "^1.5.0",
     "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@babel/preset-flow": "^7.13.13",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.12.5",
@@ -248,13 +249,13 @@
     "eslint-find-rules": "^3.6.1",
     "eslint-import-resolver-typescript": "^3.5.1",
     "eslint-plugin-detox": "^1.0.0",
+    "eslint-plugin-i18next": "6.0.0-6",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-i18next": "6.0.0-6",
     "jest": "^28.1.3",
     "jest-circus": "^28.1.1",
     "jest-environment-node": "^29.3.1",
