--- a/apps/ledger-live-mobile/package.json
+++ b/apps/ledger-live-mobile/package.json
@@ -51,12 +51,17 @@
     "lint": "eslint src --ext .js,.json,.ts,.tsx --cache",
     "lint:fix": "pnpm lint --fix",
     "typecheck": "tsc --noEmit",
-    "test:jest": "jest --testLocationInResults",
+    "test": "pnpm test:env",
     "test:env": "node ./scripts/mobile-env-md.mjs",
-    "test": "pnpm test:jest && pnpm test:env",
     "sync-locales": "./scripts/sync-locales.sh",
     "test-deep-links": "ws --spa ./deep-links-test-page.html",
     "download-hermes-profile": "zx ./scripts/download-hermes-profile.mjs"
+  },
+  "jest": {
+    "preset": "react-native",
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
+    }
   },
   "dependencies": {
     "@azure/core-asynciterator-polyfill": "^1.0.2",
@@ -208,13 +213,9 @@
     "@actions/core": "^1.5.0",
     "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@babel/preset-react": "^7.13.13",
-    "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.12.5",
     "@jest/reporters": "^29.3.1",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@testing-library/jest-native": "^5.4.2",
-    "@testing-library/react-native": "12.0.0-rc.0",
     "@types/color": "^3.0.3",
     "@types/d3-array": "~2.3.0",
     "@types/d3-scale": "^3.2.1",
@@ -273,7 +274,6 @@
     "react-native-flipper-performance-plugin": "^0.3.1",
     "react-native-performance": "^3.1.2",
     "react-native-performance-flipper-reporter": "^3.0.0",
-    "react-test-renderer": "^17.0.2",
     "strip-ansi": "6.0.1",
     "ts-jest": "^28.0.8",
     "typescript": "^4.8.3",
