--- a/apps/ledger-live-mobile/tsconfig.json
+++ b/apps/ledger-live-mobile/tsconfig.json
@@ -8,7 +8,7 @@
     "isolatedModules": true,
     "jsx": "react-native",
     "lib": ["es2017"],
-    "types": ["jest", "@testing-library/jest-native/extend-expect"],
+    "types": ["jest"],
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "noEmit": true,
