chore(ci): fix missing always condition

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -160,6 +160,7 @@ jobs:
         env:
           CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
       - uses: actions/github-script@v6
+        if: always()
         with:
           script: |
             const fs = require("fs");
