--- a/apps/ledger-live-mobile/package.json
+++ b/apps/ledger-live-mobile/package.json
@@ -36,6 +36,7 @@
     "preandroid:ci:playstore": "bundle install",
     "android:ci:playstore": "bundle exec fastlane android ci_playstore --env android.release",
     "android:ci:pre": "bundle exec fastlane android ci_playstore --env android.prerelease",
+    "android:ci:recover": "bundle exec fastlane android ci_recover --env android.prerelease",
     "preandroid:ci:nightly": "bundle install",
     "android:ci:nightly": "bundle exec fastlane android ci_nightly --env android.nightly",
     "android:hermes:staging": "export HERMES_ENABLED_ANDROID=true && pnpm android:staging",
