Remove test folder from build in domain-service

--- a/libs/domain-service/tsconfig.json
+++ b/libs/domain-service/tsconfig.json
@@ -16,6 +16,7 @@
     "typeRoots": ["./types", "./node_modules/@types"],
     "jsx": "react"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["src/__tests__"]
 }
 
