--- a/libs/domain-service/package.json
+++ b/libs/domain-service/package.json
@@ -66,10 +66,14 @@
     "@ledgerhq/cryptoassets": "workspace:^",
     "@ledgerhq/errors": "workspace:^",
     "@ledgerhq/live-common": "workspace:^",
-    "@ledgerhq/logs": "workspace:^"
+    "@ledgerhq/logs": "workspace:^",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@ledgerhq/types-cryptoassets": "workspace:^",
+    "@testing-library/react": "12",
+    "@testing-library/react-hooks": "^4.0.1",
     "@types/jest": "^28.1.3",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
@@ -83,6 +87,7 @@
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "prettier": "^2.8.1",
+    "react-test-renderer": "^17.0.2",
     "ts-jest": "^28.0.8",
     "typescript": "^4.9.5"
   }
