--- a/libs/domain-service/package.json
+++ b/libs/domain-service/package.json
@@ -67,6 +67,7 @@
     "@ledgerhq/errors": "workspace:^",
     "@ledgerhq/live-common": "workspace:^",
     "@ledgerhq/logs": "workspace:^",
+    "@ledgerhq/types-live": "workspace:^",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
