Update domain resolver sig + registry test + eip55

--- a/libs/domain-service/package.json
+++ b/libs/domain-service/package.json
@@ -68,6 +68,7 @@
     "@ledgerhq/live-common": "workspace:^",
     "@ledgerhq/logs": "workspace:^",
     "@ledgerhq/types-live": "workspace:^",
+    "eip55": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
