--- a/apps/ledger-live-desktop/package.json
+++ b/apps/ledger-live-desktop/package.json
@@ -173,8 +173,11 @@
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
     "@storybook/react": "^6.3.12",
+    "@testing-library/dom": "^9.0.1",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "12",
     "@testing-library/react-hooks": "^4.0.1",
+    "@testing-library/user-event": "^14.4.3",
     "@types/invariant": "^2.2.35",
     "@types/jest": "^28.1.6",
     "@types/lodash": "^4.14.182",
@@ -226,7 +229,6 @@
     "istanbul-instrumenter-loader": "^3.0.1",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "28",
-    "ts-jest": "^28.0.8",
     "listr": "^0.14.3",
     "listr-verbose-renderer": "^0.6.0",
     "native-modules-tools": "workspace:*",
@@ -238,6 +240,7 @@
     "remove-flow-types-loader": "^1.1.0",
     "serve-handler": "^6.1.3",
     "style-loader": "^1.2.1",
+    "ts-jest": "^28.0.8",
     "typescript": "^4.8.3",
     "url-loader": "^4.1.1",
     "v8-to-istanbul": "^8.1.0",
