--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,6 +48,10 @@ jobs:
         run: pnpm i --filter="!./apps/**" --frozen-lockfile
       - name: run doc
         run: pnpm doc:ljs
+      - name: status and diff
+        run: |
+          git status
+          git diff --exit-code
       - name: get diff
         id: diff
         run: |
@@ -82,6 +86,10 @@ jobs:
         run: pnpm build:cli
       - name: test cli
         run: pnpm test --filter="live-cli"
+      - name: status and diff
+        run: |
+          git status
+          git diff --exit-code
       - name: get diff
         id: diff
         run: |
